--- a/templates/chords_in_key.html
+++ b/templates/chords_in_key.html
@@ -47,9 +47,9 @@
             <li class="nav-item active">
                 <a class="nav-link" href="/projects">projects</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link" href="/blog">the blog</a>
-            </li>
+            </li> -->
         </ul>
     </nav>
 
@@ -71,10 +71,8 @@
             The higher fret must be no larger than 5 frets higher than the lower fret;
             otherwise, substantially more chords are returned. 
             <br>
-            Only standard tuning is supported at this point. 
+            Only standard tuning (E, A, D, G, B, e) is supported at this time. 
             
-        
-
         </p>
         
         <form action="keychords_results" id="just_font">
@@ -110,7 +108,7 @@
 
         <div class="centered_text">
             <p> 
-            <a href="https://www.linkedin.com/in/curtis-smith-p-g-3676b785">linkedIn</a>
+            <a href="https://www.linkedin.com/in/curtis-smith-p-g-3676b785">LinkedIn</a>
                 ||    
             <a href="https://github.com/curtissmith291">GitHub</a>
             </p>
