--- a/templates/home.html
+++ b/templates/home.html
@@ -68,9 +68,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="/projects">projects</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link" href="/blog">the blog</a>
-            </li>
+            </li> -->
         </ul>
     </nav>
 
@@ -80,7 +80,7 @@
 
     <div class="container" id="backgroudn">
         <p class="centered_text">
-            Hi, welcome to my website. 
+            Hi, welcome to my Django-built website. 
             <br>
         </p>
     </div>
@@ -104,8 +104,8 @@
                     remediation of EPA Superfund Sites. 
                     <br><br>
                     My previous roles were heavy on report writing, field sampling, logistical preparation
-                    for field events, and sub-contractor oversight. However, my background includes quite a 
-                    bit of data analysis: geology is more than just looking at rocks. Quantitative analysis 
+                    for field events, and subcontractor oversight. However, my background includes quite a 
+                    bit of data analysis: It involves quantitative analysis 
                     of material composition, analyzing temporal and spatial contamination trends, statistical 
                     analysis of remediation goals and benchmarks, and visualization of all the aformentioned 
                     data. 
@@ -119,7 +119,7 @@
             <div class="col">
                 <img class="headshot" 
                 src="{% static 'images/sandia.jpg' %}" 
-                alt="Uh oh, a picture is supposed to be here. The issue is probably on your end..." 
+                alt="yikes, this is embrassing..." 
                 title="Sandia Mountains, New Mexico">
                 </img>
                 <p class="centered_text" for="headshot">Hiking in the Sandia Mountains, New Mexico</p>
@@ -140,14 +140,13 @@
                 <ul class="left_text">
                     <li>Python - Pandas, Plotly, Scikit Learn, TensorFlow</li>
                     <li>APIs and JSON - Spotify, United States Geological Survey, Environmental Protection Agency, MapBox, OpenWeatherMap</li>
-                    <li>Django</li>
+                    <li>Django; web app deployment to Linux server</li>
                     <li>HTML and CSS</li>
-                    <li>SQL - MySQL and PostgreSQL</li>
+                    <li>SQL - MySQL, PostgreSQL, SQLite3, and Python-Database interaction</li>
                     <li>Tableau</li>
                     <li>Excel and VBA</li>
                     <li>Some R and Javascript</li>
-                    <li>Plus, 5 years' experience in environmental consulting, and all of the reporting, Excel, logistics, field work, 
-                        and data collection inherent to the job</li>
+                    <li>Plus, 5 years' experience in environmental consulting</li>
                 </ul>
 
             </div>
@@ -183,7 +182,7 @@
 
         <div class="centered_text">
             <p> 
-            <a href="https://www.linkedin.com/in/curtis-smith-p-g-3676b785">linkedIn</a>
+            <a href="https://www.linkedin.com/in/curtis-smith-p-g-3676b785">LinkedIn</a>
                 ||    
             <a href="https://github.com/curtissmith291">GitHub</a>
             </p>
