--- a/templates/projects.html
+++ b/templates/projects.html
@@ -62,9 +62,9 @@
             <li class="nav-item active">
                 <a class="nav-link" href="/projects">projects</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link" href="/blog">the blog</a>
-            </li>
+            </li> -->
         </ul>
     </nav>
 
@@ -92,23 +92,39 @@
 
 	<div class="container">
 
-        <a class="link" href="">Lyrics 'n Genres: A Machine Learning Analysis</a>
+        <a class="link" href="/beer_rec">Beer Recommendations App</a>
 		<p class="left_text">
-            Coming soon!
-            <br>
-            An analysis of the relationship of lyrics and the genre to which the song belogs.
+            Why pick a beer at random and you can let a machine pick one for you?
 		</p>
 		<p class="left_text">Tags:
 			<span class="badge badge-pill badge-light">Python</span>
             <span class="badge badge-pill badge-light">Pandas</span>
-            <span class="badge badge-pill badge-light">Databases</span>
+            <span class="badge badge-pill badge-light">SQL</span>
+            <span class="badge badge-pill badge-light">K-Means</span>
+            <span class="badge badge-pill badge-light">Javascript</span>
+            <span class="badge badge-pill badge-light">Interactive</span>
+            <span class="badge badge-pill badge-light">Plotly</span>
+		</p>
+
+		<hr class="short_length">
+
+        <a class="link" href="">Lyrics 'n Genres: A Machine Learning Analysis</a>
+		<p class="left_text">
+            Coming soon!
+            <br>
+            An analysis of the relationship of lyrics and the genre to which the song belongs.
+		</p>
+		<p class="left_text">Tags:
+			<span class="badge badge-pill badge-light">Python</span>
+            <span class="badge badge-pill badge-light">Pandas</span>
+            <span class="badge badge-pill badge-light">SQL</span>
             <span class="badge badge-pill badge-light">Analysis</span>
             <span class="badge badge-pill badge-light">Scikit-Learn</span>
 		</p>
 
 		<hr class="short_length">
 		
-        <a class="link" href="/oklahoma_eq_analysis">Analysis of Olahoma Earthquakes</a>
+        <a class="link" href="/oklahoma_eq_analysis">Analysis of Oklahoma Earthquakes</a>
 		<p class="left_text">
             An analysis of the effect of waste water injection on seismicity in Oklahoma.
 		</p>
@@ -116,7 +132,7 @@
 			<span class="badge badge-pill badge-light">Python</span>
             <span class="badge badge-pill badge-light">Pandas</span>
             <span class="badge badge-pill badge-light">Plotly</span>
-            <span class="badge badge-pill badge-light">Databases</span>
+            <span class="badge badge-pill badge-light">SQL</span>
             <span class="badge badge-pill badge-light">Analysis</span>
             <span class="badge badge-pill badge-light">Scikit-Learn</span>
 		</p>
@@ -127,13 +143,13 @@
 		<p class="left_text">
 			Following this link takes you to an interactive map displaying earthquakes in Oklahoma per year, 
             from 2006 to July 2021. This is part of a larger project analyzing the correlation between wastewater
-            injection and increased seismicity in Oklhaoma.
+            injection and increased seismicity in Oklahoma.
 		</p>
 		<p class="left_text">Tags:
 			<span class="badge badge-pill badge-light">Python</span>
             <span class="badge badge-pill badge-light">Pandas</span>
             <span class="badge badge-pill badge-light">Plotly</span>
-            <span class="badge badge-pill badge-light">Databases</span>
+            <span class="badge badge-pill badge-light">SQL</span>
             <span class="badge badge-pill badge-light">Interactive</span>
 		</p>
 
@@ -197,7 +213,7 @@
 
         <div class="centered_text">
             <p> 
-            <a href="https://www.linkedin.com/in/curtis-smith-p-g-3676b785">linkedIn</a>
+            <a href="https://www.linkedin.com/in/curtis-smith-p-g-3676b785">LinkedIn</a>
                 ||    
             <a href="https://github.com/curtissmith291">GitHub</a>
             </p>
