--- a/templates/sf_locator_results.html
+++ b/templates/sf_locator_results.html
@@ -46,9 +46,9 @@
             <li class="nav-item active">
                 <a class="nav-link" href="/projects">projects</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link" href="/blog">the blog</a>
-            </li>
+            </li> -->
         </ul>
     </nav>
 
@@ -111,7 +111,7 @@
 
 		<div class="centered_text">
 			<p> 
-			<a href="https://www.linkedin.com/in/curtis-smith-p-g-3676b785">linkedIn</a>
+			<a href="https://www.linkedin.com/in/curtis-smith-p-g-3676b785">LinkedIn</a>
 				||    
 			<a href="https://github.com/curtissmith291">GitHub</a>
 			</p>
