--- a/templates/add.html
+++ b/templates/add.html
@@ -48,9 +48,9 @@
             <li class="nav-item active">
                 <a class="nav-link" href="/projects">projects</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link" href="/blog">the blog</a>
-            </li>
+            </li> -->
         </ul>
     </nav>
 
@@ -79,7 +79,7 @@
 		</h3>
 		<p class='left_text'>
 			The python code for this project is very simple; however, this project was my first incorporation
-            of feeding user input into a python function and returning the result. It's mostly kept for posterity.
+            of feeding user input into a python function and returning the result within Django. It's mostly kept for posterity.
 			<br>
             <br>
         </p>
@@ -90,7 +90,7 @@
 
 		<div class="centered_text">
 			<p> 
-			<a href="https://www.linkedin.com/in/curtis-smith-p-g-3676b785">linkedIn</a>
+			<a href="https://www.linkedin.com/in/curtis-smith-p-g-3676b785">LinkedIn</a>
 				||    
 			<a href="https://github.com/curtissmith291">GitHub</a>
 			</p>
