--- a/templates/blog.html
+++ b/templates/blog.html
@@ -53,9 +53,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="/projects">projects</a>
             </li>
-            <li class="nav-item active">
+            <!-- <li class="nav-item active">
                 <a class="nav-link" href="/blog">the blog</a>
-            </li>
+            </li> -->
         </ul>
     </nav>
 
@@ -102,7 +102,7 @@
 
         <div class="centered_text">
             <p> 
-            <a href="https://www.linkedin.com/in/curtis-smith-p-g-3676b785">linkedIn</a>
+            <a href="https://www.linkedin.com/in/curtis-smith-p-g-3676b785">LinkedIn</a>
                 ||    
             <a href="https://github.com/curtissmith291">GitHub</a>
             </p>
