--- a/templates/chords_in_key_results.html
+++ b/templates/chords_in_key_results.html
@@ -41,9 +41,9 @@
             <li class="nav-item active">
                 <a class="nav-link" href="/projects">projects</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link" href="/blog">the blog</a>
-            </li>
+            </li> -->
         </ul>
     </nav>
 
@@ -84,24 +84,12 @@
         </a>
     </div>
 
-
-    <div class="container">
-		<h3 class='left_text'>
-			Project Description
-		</h3>
-		<p class='left_text'>
-			"Find a project that aligns with your interests."
-			<br>
-            <br>
-        </p>
-    </div>
-
     <div class="container">
         <hr class="footer_hr">
 
         <div class="centered_text">
             <p> 
-            <a href="https://www.linkedin.com/in/curtis-smith-p-g-3676b785">linkedIn</a>
+            <a href="https://www.linkedin.com/in/curtis-smith-p-g-3676b785">LinkedIn</a>
                 ||    
             <a href="https://github.com/curtissmith291">GitHub</a>
             </p>
