--- a/templates/ok_eq.html
+++ b/templates/ok_eq.html
@@ -40,9 +40,9 @@
             <li class="nav-item active">
                 <a class="nav-link" href="/projects">projects</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link" href="/blog">the blog</a>
-            </li>
+            </li> -->
         </ul>
     </nav>
 
@@ -122,7 +122,7 @@
 
         <div class="centered_text">
             <p> 
-            <a href="https://www.linkedin.com/in/curtis-smith-p-g-3676b785">linkedIn</a>
+            <a href="https://www.linkedin.com/in/curtis-smith-p-g-3676b785">LinkedIn</a>
                 ||    
             <a href="https://github.com/curtissmith291">GitHub</a>
             </p>
