--- a/templates/sf_locator.html
+++ b/templates/sf_locator.html
@@ -56,9 +56,9 @@
             <li class="nav-item active">
                 <a class="nav-link" href="/projects">projects</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link" href="/blog">the blog</a>
-            </li>
+            </li> -->
         </ul>
     </nav>
 
@@ -70,6 +70,8 @@
 		<p class='left_text'>
 			This page will locate any United States Environmental Protection Agency Superfund Sites located within 
 			50 miles of your input location. 
+			<br>
+			Note: Input addresses are not saved. 
 		</p>
 	</div>
 
@@ -129,7 +131,7 @@
 
 		<div class="centered_text">
 			<p> 
-			<a href="https://www.linkedin.com/in/curtis-smith-p-g-3676b785">linkedIn</a>
+			<a href="https://www.linkedin.com/in/curtis-smith-p-g-3676b785">LinkedIn</a>
 				||    
 			<a href="https://github.com/curtissmith291">GitHub</a>
 			</p>
